--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@ Hello World</br>
 我的第一个博客</br>
 <a href=https://www.jianshu.com/p/154322554d9d>如何利用VSCode优雅的使用Git提交至GitHub</a>
 根技术
-
+4G的核心数学是SVD分解
+5G的核心数学是循环矩阵的特征值分解，得到特征矩阵和特征值，循环矩阵的特征矩阵是傅里叶变换
