--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>我的个人博客</h1></br>
-<a href=https://itanfeng.github.com>我的网站</a></br>
+<a href=https://itanfeng.github.io>我的网站</a></br>
 根技术</br>
 4G的核心数学是SVD分解</br>
 5G的核心数学是循环矩阵的特征值分解，得到特征矩阵和特征值，循环矩阵的特征矩阵是傅里叶变换</br>
