--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
             <p class="bio">后端工程师 / 技术爱好者</p>
             <div class="links">
                 <a href="https://github.com/itanfeng" target="_blank">GitHub</a>
-                <a href="mailto:itanfeng@qq.com">Email 1</a>
-                <a href="mailto:tanfeng1990@gmail.com">Email 2</a>
+                <a href="mailto:itanfeng@qq.com">itanfeng@qq.com</a>
+                <a href="mailto:tanfeng1990@gmail.com">tanfeng1990@gmail.com</a>
             </div>
         </header>
 
