--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <p class="bio">后端工程师 / 技术爱好者</p>
             <div class="links">
                 <a href="https://github.com/itanfeng" target="_blank">GitHub</a>
+                <a href="https://scholar.google.com/citations?hl=zh-CN&user=Q7Rn374AAAAJ" target="_blank">Google Scholar</a>
                 <a href="mailto:itanfeng@qq.com">itanfeng@qq.com</a>
                 <a href="mailto:tanfeng1990@gmail.com">tanfeng1990@gmail.com</a>
             </div>
