--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <header>
             <div class="avatar">i</div>
             <h1>itanfeng</h1>
-            <p class="bio">后端工程师 / 技术爱好者</p>
+            <p class="bio">AI 工程师 / 技术爱好者</p>
             <div class="links">
                 <a href="https://github.com/itanfeng" target="_blank">GitHub</a>
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=Q7Rn374AAAAJ" target="_blank">Google Scholar</a>
