feat: 添加 AI Infra 和 Agent Engineering 技能

--- a/index.html
+++ b/index.html
@@ -245,6 +245,18 @@
             <h2>技能</h2>
             <div class="skill-item">
                 <div>
+                    <div class="skill-name">AI Infra</div>
+                    <div class="skill-desc">AI 基础设施 / 算力调度</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div>
+                    <div class="skill-name">Agent Engineering</div>
+                    <div class="skill-desc">AI Agent 开发 / 工作流编排</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div>
                     <div class="skill-name">后端开发</div>
                     <div class="skill-desc">Go / Python / Java</div>
                 </div>
