refactor: 添加小模型/机器学习，删除基础架构

--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
             </div>
             <div class="skill-item">
                 <div>
-                    <div class="skill-name">后端开发</div>
-                    <div class="skill-desc">Go / Python / Java</div>
+                    <div class="skill-name">小模型 / 机器学习</div>
+                    <div class="skill-desc">模型优化 / 端侧部署 / 推理加速</div>
                 </div>
             </div>
             <div class="skill-item">
                 <div>
-                    <div class="skill-name">基础架构</div>
-                    <div class="skill-desc">分布式系统 / 微服务</div>
+                    <div class="skill-name">后端开发</div>
+                    <div class="skill-desc">Go / Python / Java</div>
                 </div>
             </div>
             <div class="skill-item">
