--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         </section>
 
         <footer>
-            <p>© 2026 <a href="https://github.com/itanfeng">itanfeng</a></p>
+            <p>© 2026 <a href="https://embedding.cc">itanfeng</a></p>
         </footer>
     </div>
 </body>
