update avatar to 峰

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="avatar">i</div>
+            <div class="avatar">峰</div>
             <h1>itanfeng</h1>
             <p class="bio">AI 工程师 / 技术爱好者</p>
             <div class="links">
