add vllm and nginx skills

--- a/index.html
+++ b/index.html
@@ -233,6 +233,18 @@
             </div>
             <div class="skill-item">
                 <div>
+                    <div class="skill-name">vLLM</div>
+                    <div class="skill-desc">大模型推理服务 / 部署优化</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div>
+                    <div class="skill-name">Nginx</div>
+                    <div class="skill-desc">反向代理 / 负载均衡</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <div>
                     <div class="skill-name">Agent Engineering</div>
                     <div class="skill-desc">AI Agent 开发 / 工作流编排</div>
                 </div>
