--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </section>
 
         <footer>
-            <p>© 2026 <a href="https://embedding.cc">itanfeng</a></p>
+            <p>© 2026 <a href="https://embedding.com">itanfeng</a></p>
         </footer>
     </div>
 </body>
