--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <a href="https://github.com/itanfeng" target="_blank">GitHub</a>
                 <a href="https://x.com/itanfeng" target="_blank">X (Twitter)</a>
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=Q7Rn374AAAAJ" target="_blank">Google Scholar</a>
-                <a href="mailto:me@embedding.com">me@embedding.com</a>
+                <a href="mailto:me@embedding.cc">me@embedding.cc</a>
             </div>
         </header>
 
@@ -269,7 +269,7 @@
         </section>
 
         <footer>
-            <p>© 2026 <a href="https://embedding.com">itanfeng</a></p>
+            <p>© 2026 <a href="https://embedding.cc">itanfeng</a></p>
         </footer>
     </div>
 </body>
