--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
             <p class="bio">AI 工程师 / 技术爱好者</p>
             <div class="links">
                 <a href="https://github.com/itanfeng" target="_blank">GitHub</a>
+                <a href="https://www.zhihu.com/people/itanfeng" target="_blank">知乎</a>
                 <a href="https://x.com/itanfeng" target="_blank">X (Twitter)</a>
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=Q7Rn374AAAAJ" target="_blank">Google Scholar</a>
                 <a href="mailto:me@embedding.cc">me@embedding.cc</a>
