Add logo to homepage

--- a/index.html
+++ b/index.html
@@ -44,12 +44,7 @@
             width: 64px;
             height: 64px;
             border-radius: 50%;
-            background: linear-gradient(135deg, #22c55e, #16a34a);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 24px;
-            font-weight: 600;
+            object-fit: cover;
             margin-bottom: 24px;
         }
 
@@ -191,7 +186,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="avatar">峰</div>
+            <img class="avatar" src="logo.jpg" alt="itanfeng">
             <h1>itanfeng</h1>
             <p class="bio">AI 工程师 / 技术爱好者</p>
             <div class="links">
