Logo: keep original aspect ratio

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 
         .avatar {
             width: 96px;
-            height: 64px;
-            object-fit: cover;
+            height: auto;
             margin-bottom: 24px;
         }
 
