feat: update title and logo to embedding.cc

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>itanfeng</title>
+    <title>embedding.cc</title>
     <style>
         * {
             margin: 0;
@@ -148,6 +148,14 @@
             color: var(--text-muted);
         }
 
+        .logo-text .embedding {
+            color: #4a4a4a;
+        }
+        
+        .logo-text .cc {
+            color: #3b82f6;
+        }
+
         footer {
             padding: 32px 0;
             border-top: 1px solid var(--border);
@@ -184,8 +192,7 @@
 <body>
     <div class="container">
         <header>
-            <img class="avatar" src="logo.jpg" alt="itanfeng">
-            <h1>itanfeng</h1>
+            <h1><span class="logo-text"><span class="embedding">embedding</span><span class="cc">.cc</span></span></h1>
             <p class="bio">AI 工程师 / 技术爱好者</p>
             <div class="links">
                 <a href="https://github.com/itanfeng" target="_blank">GitHub</a>
