--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         }
 
         .logo-text .embedding {
-            color: #4a4a4a;
+            color: #9ca3af;
         }
         
         .logo-text .cc {
