--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <a href="https://www.zhihu.com/people/itanfeng" target="_blank">知乎</a>
                 <a href="https://x.com/itanfeng" target="_blank">X (Twitter)</a>
                 <a href="https://tanfeng.medium.com/" target="_blank">Medium</a>
-                <a href="https://dinq.me/tanfeng" target="_blank">DiniK</a>
+                <a href="https://dinq.me/tanfeng" target="_blank">Dinq</a>
                 <a href="mailto:me@embedding.cc">me@embedding.cc</a>
             </div>
         </header>
