fix: change copyright to embedding.cc

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </section>
 
         <footer>
-            <p>© 2026 <a href="https://embedding.cc">itanfeng</a></p>
+            <p>© 2026 <a href="https://embedding.cc">embedding.cc</a></p>
         </footer>
     </div>
 </body>
